traefik-external/traefik-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external-service
  namespace: traefik-external
spec:
  selector:
    app: traefik-external
  ports:
    - port: 80
      name: web
    - port: 443
      name: websecure
