traefik-external/truenas-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-ingress
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.lab53.net`)
      kind: Rule
      services:
        - name: traefik-external-service
          serversTransport: traefik-insecuretransport@kubernetescrd
          port: 80
  tls:
    certResolver: letsencrypt
